// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`attributes/attributes.squiffy 1`] = `
"export const story = {};
story.id = "attributes.squiffy";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "<p>Set a start value: <a class=\\"squiffy-link link-section\\" data-section=\\"one\\" role=\\"link\\" tabindex=\\"0\\">1</a> or <a class=\\"squiffy-link link-section\\" data-section=\\"two\\" role=\\"link\\" tabindex=\\"0\\">2</a>.</p>",
        "attributes": [
            "my_string = some text"
        ]
    },
    "one": {
        "text": "<p>Maybe you&#39;d like it to be <a class=\\"squiffy-link link-passage\\" data-passage=\\"three\\" role=\\"link\\" tabindex=\\"0\\">3</a> instead? Or you could just <a class=\\"squiffy-link link-section\\" data-section=\\"next\\" role=\\"link\\" tabindex=\\"0\\">continue...</a></p>",
        "attributes": [
            "my_attribute = 1"
        ],
        "passages": {
            "three": {
                "text": "<p>OK. Three it is.</p>",
                "attributes": [
                    "my_attribute = 3",
                    "chose_passage"
                ]
            }
        }
    },
    "two": {
        "text": "<p>Maybe you&#39;d like it to be <a class=\\"squiffy-link link-passage\\" data-passage=\\"four\\" role=\\"link\\" tabindex=\\"0\\">4</a> instead? You could try <a class=\\"squiffy-link link-passage\\" data-passage=\\"javascript\\" role=\\"link\\" tabindex=\\"0\\">javascript</a>. Or you could just <a class=\\"squiffy-link link-section\\" data-section=\\"next\\" role=\\"link\\" tabindex=\\"0\\">continue...</a></p>",
        "attributes": [
            "my_attribute = 2"
        ],
        "passages": {
            "javascript": {
                "text": "",
                "jsIndex": 0
            },
            "four": {
                "text": "<p>OK. Four it is.</p>",
                "attributes": [
                    "my_attribute = 4",
                    "chose_passage"
                ]
            }
        }
    },
    "next": {
        "text": "<p>my_attribute = {my_attribute}</p>\\n<p>Also, my_string = &quot;{my_string}&quot;</p>\\n<p>Did you choose a passage link? {if chose_passage:yes}{else:no} <a class=\\"squiffy-link link-passage\\" data-passage=\\"unset\\" role=\\"link\\" tabindex=\\"0\\">unset</a></p>\\n<p>Click some more links: <a class=\\"squiffy-link link-passage\\" data-passage=\\"a\\" role=\\"link\\" tabindex=\\"0\\">a</a>, <a class=\\"squiffy-link link-passage\\" data-passage=\\"b\\" role=\\"link\\" tabindex=\\"0\\">b</a>, <a class=\\"squiffy-link link-passage\\" data-passage=\\"c\\" role=\\"link\\" tabindex=\\"0\\">c</a>, <a class=\\"squiffy-link link-passage\\" data-passage=\\"d\\" role=\\"link\\" tabindex=\\"0\\">d</a>, <a class=\\"squiffy-link link-passage\\" data-passage=\\"e\\" role=\\"link\\" tabindex=\\"0\\">e</a> and then click <a class=\\"squiffy-link link-section\\" data-section=\\"done\\" role=\\"link\\" tabindex=\\"0\\">done</a>.</p>",
        "passages": {
            "unset": {
                "text": "<p>Now the value is: {if chose_passage:yes}{else:no}</p>",
                "attributes": [
                    "not chose_passage"
                ]
            },
            "a": {
                "text": "<p>OK...</p>",
                "attributes": [
                    "count+=1"
                ]
            },
            "b": {
                "text": "<p>OK...</p>",
                "attributes": [
                    "count+=1"
                ]
            },
            "c": {
                "text": "<p>OK...</p>",
                "attributes": [
                    "count+=1"
                ]
            },
            "d": {
                "text": "<p>OK...</p>",
                "attributes": [
                    "count+=1"
                ]
            },
            "e": {
                "text": "<p>OK...</p>",
                "attributes": [
                    "count+=1"
                ]
            }
        }
    },
    "done": {
        "text": "<p>You clicked {count} links. What about calling <a class=\\"squiffy-link link-passage\\" data-passage=\\"dec\\" role=\\"link\\" tabindex=\\"0\\">dec</a>?</p>",
        "passages": {
            "dec": {
                "text": "<p>Now count is {count}. You can also <a class=\\"squiffy-link link-passage\\" data-passage=\\"increase\\" role=\\"link\\" tabindex=\\"0\\">increase</a> or <a class=\\"squiffy-link link-passage\\" data-passage=\\"decrease\\" role=\\"link\\" tabindex=\\"0\\">decrease</a> by values other than 1.</p>",
                "attributes": [
                    "count-=1"
                ]
            },
            "increase": {
                "text": "<p>Now count is {count}.</p>",
                "attributes": [
                    "count+=10"
                ]
            },
            "decrease": {
                "text": "<p>Now count is {count}.</p>",
                "attributes": [
                    "count-=5"
                ]
            }
        }
    }
};
story.js = [
	(squiffy, get, set) => {
		alert("my_attribute " + get("my_attribute"));
	},
];"
`;

exports[`clearscreen/clearscreen.squiffy 1`] = `
"export const story = {};
story.id = "clearscreen.squiffy";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "<p><a class=\\"squiffy-link link-passage\\" data-passage=\\"one\\" role=\\"link\\" tabindex=\\"0\\">This link</a> doesn&#39;t clear the screen. But <a class=\\"squiffy-link link-passage\\" data-passage=\\"two\\" role=\\"link\\" tabindex=\\"0\\">this link</a> does.</p>",
        "passages": {
            "one": {
                "text": "<p>This text is on the same screen.</p>"
            },
            "two": {
                "clear": true,
                "text": "<p>This text is on a new screen. This <a class=\\"squiffy-link link-section\\" data-section=\\"same page\\" role=\\"link\\" tabindex=\\"0\\">section</a> will be on the same screen, and this <a class=\\"squiffy-link link-section\\" data-section=\\"clear section\\" role=\\"link\\" tabindex=\\"0\\">section</a> clears the screen.</p>"
            }
        }
    },
    "same page": {
        "text": "<p>This section is on the same screen.</p>"
    },
    "clear section": {
        "clear": true,
        "text": "<p>Another new page.</p>"
    }
};
story.js = [
];"
`;

exports[`continue/continue.squiffy 1`] = `
"export const story = {};
story.id = "continue.squiffy";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "<p>Here is some text.</p>\\n<p><a class=\\"squiffy-link link-section\\" data-section=\\"_continue1\\" role=\\"link\\" tabindex=\\"0\\">Continue...</a></p>"
    },
    "_continue1": {
        "text": "<p>More text.</p>\\n<p><a class=\\"squiffy-link link-section\\" data-section=\\"_continue2\\" role=\\"link\\" tabindex=\\"0\\">Carry on further...</a></p>"
    },
    "_continue2": {
        "text": "<p>There&#39;s some more text now.</p>\\n<p><a class=\\"squiffy-link link-section\\" data-section=\\"_continue3\\" role=\\"link\\" tabindex=\\"0\\">Keep walking!</a></p>"
    },
    "_continue3": {
        "text": "<p>Oh, even more text appeared!</p>\\n<p><a class=\\"squiffy-link link-section\\" data-section=\\"_continue4\\" role=\\"link\\" tabindex=\\"0\\">A little closer...</a></p>"
    },
    "_continue4": {
        "text": "<p>Pretty scary.</p>",
        "jsIndex": 0
    }
};
story.js = [
	(squiffy, get, set) => {
		alert("BOO!")
	},
];"
`;

exports[`helloworld/helloworld.squiffy 1`] = `
"export const story = {};
story.id = "helloworld.squiffy";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "<p>Hello, world!</p>"
    }
};
story.js = [
];"
`;

exports[`import/test.squiffy 1`] = `
"export const story = {};
story.id = "test.squiffy";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "<p>Text from file 1.</p>\\n<p><a class=\\"squiffy-link link-section\\" data-section=\\"file2\\" role=\\"link\\" tabindex=\\"0\\">Go to file 2</a></p>"
    },
    "file2": {
        "text": "<p>Text from file 2. Run the <a class=\\"squiffy-link link-passage\\" data-passage=\\"test\\" role=\\"link\\" tabindex=\\"0\\">test</a> function.</p>",
        "passages": {
            "test": {
                "text": "",
                "jsIndex": 0
            }
        }
    }
};
story.js = [
	(squiffy, get, set) => {
		test();
	},
];"
`;

exports[`last/last.squiffy 1`] = `
"export const story = {};
story.id = "last.squiffy";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "<p>Test section with some passages. <a class=\\"squiffy-link link-passage\\" data-passage=\\"a\\" role=\\"link\\" tabindex=\\"0\\">a</a>, <a class=\\"squiffy-link link-passage\\" data-passage=\\"b\\" role=\\"link\\" tabindex=\\"0\\">b</a>, <a class=\\"squiffy-link link-passage\\" data-passage=\\"c\\" role=\\"link\\" tabindex=\\"0\\">c</a>.</p>",
        "passageCount": 3,
        "passages": {
            "a": {
                "text": "<p>Passage A.</p>"
            },
            "b": {
                "text": "<p>Passage B.</p>"
            },
            "c": {
                "text": "<p>Passage C.</p>"
            },
            "@last": {
                "text": "<p>You saw all passages! Now go to the <a class=\\"squiffy-link link-section\\" data-section=\\"section2\\" role=\\"link\\" tabindex=\\"0\\">next section</a>.</p>"
            }
        }
    },
    "section2": {
        "text": "<p>Second test. <a class=\\"squiffy-link link-passage\\" data-passage=\\"a\\" role=\\"link\\" tabindex=\\"0\\">a</a>, <a class=\\"squiffy-link link-passage\\" data-passage=\\"b\\" role=\\"link\\" tabindex=\\"0\\">b</a>, <a class=\\"squiffy-link link-passage\\" data-passage=\\"c\\" role=\\"link\\" tabindex=\\"0\\">c</a>.</p>",
        "passageCount": 3,
        "passages": {
            "": {
                "text": "<p>Master passage.</p>"
            },
            "a": {
                "text": "<p>Passage A.</p>"
            },
            "b": {
                "text": "<p>Passage B.</p>"
            },
            "c": {
                "text": "<p>Passage C.</p>"
            },
            "@last": {
                "text": "<p>You saw all passages!</p>"
            }
        }
    }
};
story.js = [
];"
`;

exports[`master/master.squiffy 1`] = `
"export const story = {};
story.id = "master.squiffy";
story.start = "intro";
story.sections = {
    "": {
        "text": "<p>This text appears before each section in the game.</p>",
        "passages": {
            "": {
                "text": "",
                "jsIndex": 0
            }
        }
    },
    "intro": {
        "text": "<p>This is the first section.</p>\\n<p><a class=\\"squiffy-link link-section\\" data-section=\\"_continue1\\" role=\\"link\\" tabindex=\\"0\\">Continue...</a></p>"
    },
    "_continue1": {
        "text": "<p>This is the second section. <a class=\\"squiffy-link link-passage\\" data-passage=\\"One\\" role=\\"link\\" tabindex=\\"0\\">One</a>, <a class=\\"squiffy-link link-passage\\" data-passage=\\"two\\" role=\\"link\\" tabindex=\\"0\\">two</a>, <a class=\\"squiffy-link link-passage\\" data-passage=\\"three\\" role=\\"link\\" tabindex=\\"0\\">three</a>. <a class=\\"squiffy-link link-section\\" data-section=\\"Next!\\" role=\\"link\\" tabindex=\\"0\\">Next!</a></p>",
        "passages": {
            "": {
                "text": "<p>This text appears before each passage in this section.</p>",
                "jsIndex": 1
            },
            "One": {
                "text": "<p>1...</p>"
            },
            "two": {
                "text": "<p>2...</p>"
            },
            "three": {
                "text": "<p>3...</p>"
            }
        }
    },
    "Next!": {
        "text": "<p>Final section, no master passages here. <a class=\\"squiffy-link link-passage\\" data-passage=\\"See\\" role=\\"link\\" tabindex=\\"0\\">See</a>.</p>",
        "passages": {
            "See": {
                "text": "<p>The end...</p>"
            }
        }
    }
};
story.js = [
	(squiffy, get, set) => {
		console.log("This JS runs for each passage in the entire game.")
	},
	(squiffy, get, set) => {
		console.log("This JS runs for each passage in the second section.");
	},
];"
`;

exports[`replace/replace.squiffy 1`] = `
"export const story = {};
story.id = "replace.squiffy";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "<p>I {label:1=walked} to the shops and I bought {label:2=a pint of milk}.</p>\\n<p>But then I thought, hang on, I <a class=\\"squiffy-link link-passage\\" data-passage=\\"next, @replace 2=beer\\" role=\\"link\\" tabindex=\\"0\\">don&#39;t really like milk</a>.</p>",
        "passages": {
            "beer": {
                "text": "<p>a <a class=\\"squiffy-link link-passage\\" data-passage=\\"crate of beer\\" role=\\"link\\" tabindex=\\"0\\">crate of beer</a></p>"
            },
            "crate of beer": {
                "text": "<p>Yes, beer.</p>"
            },
            "next": {
                "text": "<p>And then I thought, hang on, I {label:3=<a class=\\"squiffy-link link-passage\\" data-passage=\\"@replace 1=teleported, @replace 3=love teleporting\\" role=\\"link\\" tabindex=\\"0\\">hate walking</a>}.</p>"
            },
            "love teleporting": {
                "text": "<p>love teleporting, so much I might <a class=\\"squiffy-link link-section\\" data-section=\\"section2\\" role=\\"link\\" tabindex=\\"0\\">embark on a wild and crazy adventure</a></p>"
            }
        }
    },
    "section2": {
        "text": "<p>And so it {label:4=began...}</p>\\n<p><a class=\\"squiffy-link link-section\\" data-section=\\"section3\\" role=\\"link\\" tabindex=\\"0\\">Or did it?</a></p>"
    },
    "section3": {
        "text": "<p>Oh well.</p>",
        "attributes": [
            "@replace 4=<p>ended <a class=\\"squiffy-link link-passage\\" data-passage=\\"abruptly\\" role=\\"link\\" tabindex=\\"0\\">abruptly</a>.</p>"
        ],
        "passages": {
            "abruptly": {
                "text": "<p>That is all.</p>"
            }
        }
    }
};
story.js = [
];"
`;

exports[`rotate/rotate.squiffy 1`] = `
"export const story = {};
story.id = "rotate.squiffy";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "<p>Choose a number: {rotate:one:two:three}</p>\\n<p><a class=\\"squiffy-link link-section\\" data-section=\\"_continue1\\" role=\\"link\\" tabindex=\\"0\\">OK...</a></p>"
    },
    "_continue1": {
        "text": "<p>Now {rotate result:four:five:six}</p>\\n<p><a class=\\"squiffy-link link-section\\" data-section=\\"_continue2\\" role=\\"link\\" tabindex=\\"0\\">OK...</a></p>"
    },
    "_continue2": {
        "text": "<p>You chose {result}.</p>\\n<p>Now for a sequence: {sequence:one:two:three:four:five}.</p>\\n<p><a class=\\"squiffy-link link-section\\" data-section=\\"_continue3\\" role=\\"link\\" tabindex=\\"0\\">And another...</a></p>"
    },
    "_continue3": {
        "text": "<p>Another sequence: {sequence seqresult:a:b:c:d:e:f:g}.</p>\\n<p><a class=\\"squiffy-link link-section\\" data-section=\\"_continue4\\" role=\\"link\\" tabindex=\\"0\\">Finally...</a></p>"
    },
    "_continue4": {
        "text": "<p>You chose {seqresult}.</p>\\n<p>Here&#39;s a sequence that links to another section. {sequence:Ready...:Steady...:<a class=\\"squiffy-link link-section\\" data-section=\\"Go!\\" role=\\"link\\" tabindex=\\"0\\">Go!</a>}</p>"
    },
    "Go!": {
        "text": "<p>That&#39;s all folks!</p>"
    }
};
story.js = [
];"
`;

exports[`sectiontrack/sectiontrack.squiffy 1`] = `
"export const story = {};
story.id = "sectiontrack.squiffy";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "<p>Choose: <a class=\\"squiffy-link link-section\\" data-section=\\"a\\" role=\\"link\\" tabindex=\\"0\\">a</a>, <a class=\\"squiffy-link link-section\\" data-section=\\"b\\" role=\\"link\\" tabindex=\\"0\\">b</a>, <a class=\\"squiffy-link link-section\\" data-section=\\"c\\" role=\\"link\\" tabindex=\\"0\\">c</a>. Or read this <a class=\\"squiffy-link link-passage\\" data-passage=\\"note\\" role=\\"link\\" tabindex=\\"0\\">note</a>.</p>",
        "passages": {
            "note": {
                "text": "<p>This is a passage.</p>"
            }
        }
    },
    "a": {
        "text": "<p>Now choose <a class=\\"squiffy-link link-section\\" data-section=\\"b\\" role=\\"link\\" tabindex=\\"0\\">b</a> or <a class=\\"squiffy-link link-section\\" data-section=\\"c\\" role=\\"link\\" tabindex=\\"0\\">c</a>.</p>"
    },
    "b": {
        "text": "<p>Now go to <a class=\\"squiffy-link link-section\\" data-section=\\"c\\" role=\\"link\\" tabindex=\\"0\\">c</a>.</p>"
    },
    "c": {
        "text": "<p>{if seen a:You saw A.}{else:You didn&#39;t see A.}\\n{if not seen b:You didn&#39;t see B.}{else:You saw B.}</p>\\n<p>{if seen note:You looked at the note.}{else:You didn&#39;t look at the note.}</p>"
    }
};
story.js = [
];"
`;

exports[`start/start.squiffy 1`] = `
"export const story = {};
story.id = "start.squiffy";
story.start = "the start section";
story.sections = {
    "not the start section": {
        "text": "<p>This is page 2, although it was defined first.</p>"
    },
    "the start section": {
        "text": "<p>This is the start section. We also defined a section called <a class=\\"squiffy-link link-section\\" data-section=\\"not the start section\\" role=\\"link\\" tabindex=\\"0\\">not the start section</a>.</p>"
    }
};
story.js = [
];"
`;

exports[`test/example.squiffy 1`] = `
"export const story = {};
story.id = "example.squiffy";
story.start = "Introduction";
story.sections = {
    "Introduction": {
        "text": "<h1>Squiffy Test</h1>\\n<p>This is <a href=\\"http://textadventures.co.uk\\">a website link</a>.</p>\\n<p>This should be <a class=\\"squiffy-link link-passage\\" data-passage=\\"passage\\" role=\\"link\\" tabindex=\\"0\\">a link to a passage</a>. Here&#39;s <a class=\\"squiffy-link link-passage\\" data-passage=\\"passage2\\" role=\\"link\\" tabindex=\\"0\\">another one</a>.</p>\\n<p>You don&#39;t need to specify a name - for example, this <a class=\\"squiffy-link link-passage\\" data-passage=\\"link\\" role=\\"link\\" tabindex=\\"0\\">link</a> and this <a class=\\"squiffy-link link-section\\" data-section=\\"section\\" role=\\"link\\" tabindex=\\"0\\">section</a>.</p>\\n<p>And this goes to the <a class=\\"squiffy-link link-section\\" data-section=\\"section2\\" role=\\"link\\" tabindex=\\"0\\">next section</a>.</p>\\n<p>This line has links to <a class=\\"squiffy-link link-section\\" data-section=\\"section 3\\" role=\\"link\\" tabindex=\\"0\\">section 3</a> and <a class=\\"squiffy-link link-section\\" data-section=\\"section four\\" role=\\"link\\" tabindex=\\"0\\">section 4</a>.</p>\\n<p>This line has links to <a class=\\"squiffy-link link-passage\\" data-passage=\\"passage 3\\" role=\\"link\\" tabindex=\\"0\\">passage 3</a> and <a class=\\"squiffy-link link-passage\\" data-passage=\\"passage four\\" role=\\"link\\" tabindex=\\"0\\">passage 4</a>.</p>\\n<p>Oh look - <a class=\\"squiffy-link link-passage\\" data-passage=\\"it's a passage with an apostrophe\\" role=\\"link\\" tabindex=\\"0\\">it&#39;s a passage with an apostrophe</a>.</p>",
        "passages": {
            "passage": {
                "text": "<p>Here&#39;s some text for the passage.</p>"
            },
            "passage2": {
                "text": "<p>This is the text for the second passage.</p>",
                "jsIndex": 0
            },
            "passage 3": {
                "text": "<p>Another passage.</p>"
            },
            "passage four": {
                "text": "<p>Yet another passage.</p>"
            },
            "link": {
                "text": "<p>Here is the text for the simple link.</p>"
            },
            "it's a passage with an apostrophe": {
                "text": "<p>Nothing to worry about.</p>"
            }
        }
    },
    "section2": {
        "text": "<p>This is the next section.</p>",
        "jsIndex": 1
    },
    "section": {
        "text": "<p>This is another section.</p>"
    },
    "section 3": {
        "text": "<p>Another section is here.</p>"
    },
    "section four": {
        "text": "<p>Some other section.</p>"
    }
};
story.js = [
	(squiffy, get, set) => {
		alert ("This passage has some JavaScript");
	},
	(squiffy, get, set) => {
		alert ("This section has some JavaScript");
	},
];"
`;

exports[`textprocessor/textprocessor.squiffy 1`] = `
"export const story = {};
story.id = "textprocessor.squiffy";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "<p>Choose a gender:</p>\\n<ul>\\n<li><a class=\\"squiffy-link link-section\\" data-section=\\"start, gender=male\\" role=\\"link\\" tabindex=\\"0\\">Male</a></li>\\n<li><a class=\\"squiffy-link link-section\\" data-section=\\"start, gender=female\\" role=\\"link\\" tabindex=\\"0\\">Female</a></li>\\n</ul>"
    },
    "start": {
        "text": "<p>You chose {gender}.</p>\\n<p>{if gender=male:You are a man.}\\n{else:You are a woman.}</p>\\n<p><a class=\\"squiffy-link link-passage\\" data-passage=\\"Next\\" role=\\"link\\" tabindex=\\"0\\">Next</a></p>",
        "passages": {
            "Next": {
                "text": "<p>This is a test. {passage} {section}</p>"
            },
            "passage": {
                "text": "<p>Text from passage.</p>"
            }
        }
    },
    "section": {
        "text": "<p>Text from section.</p>"
    }
};
story.js = [
];"
`;

exports[`transitions/transitions.squiffy 1`] = `
"export const story = {};
story.id = "transitions.squiffy";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "<p>You are standing in a room. You can see a <a class=\\"squiffy-link link-passage\\" data-passage=\\"hammer\\" role=\\"link\\" tabindex=\\"0\\">hammer</a>.</p>",
        "passages": {
            "hammer": {
                "text": "<p>It&#39;s nice and weighty. Perhaps you want to <a class=\\"squiffy-link link-section\\" data-section=\\"hit\\" role=\\"link\\" tabindex=\\"0\\">hit yourself in the face with it</a>?</p>"
            }
        }
    },
    "hit": {
        "text": "<p>Bang.</p>",
        "jsIndex": 0
    },
    "wake up": {
        "clear": true,
        "text": "<p>Slowly your eyes open.</p>\\n<p>That was a rather stupid thing to do.</p>"
    }
};
story.js = [
	(squiffy, get, set) => {
		squiffy.ui.transition(function(){
			// Create a blackout <div>...
			$("<div/>", {
				id: "blackout"
			}).css({
				position: "fixed",
				top: 0,
				left: 0,
				width: "100%",
				height: "100%",
				background: "black",
				display: "none"
			}).appendTo("body");
			// Fade it in over 6 seconds...
			$("#blackout").fadeIn({
				duration: 6000,
				easing: "easeInQuad",
			});
			// After fading it in...
			setTimeout(function () {
				// Move to the next section...
				squiffy.story.go("wake up");
				// Fade out the blackout and remove the <div>...
				$("#blackout").fadeOut({
					duration: 6000,
					easing: "easeInQuad",
					complete: function() {
						$(this).remove();
					}
				});
			}, 9000);
		});
		
	},
];"
`;

exports[`turncount/turncount.squiffy 1`] = `
"export const story = {};
story.id = "turncount.squiffy";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "<p>After clicking two links in this section, an additional passage will be displayed.</p>\\n<p><a class=\\"squiffy-link link-passage\\" data-passage=\\"One\\" role=\\"link\\" tabindex=\\"0\\">One</a>, <a class=\\"squiffy-link link-passage\\" data-passage=\\"two\\" role=\\"link\\" tabindex=\\"0\\">two</a>, <a class=\\"squiffy-link link-passage\\" data-passage=\\"three\\" role=\\"link\\" tabindex=\\"0\\">three</a>, <a class=\\"squiffy-link link-passage\\" data-passage=\\"four\\" role=\\"link\\" tabindex=\\"0\\">four</a>.</p>",
        "passages": {
            "One": {
                "text": "<p>First passage.</p>"
            },
            "two": {
                "text": "<p>Second passage.</p>"
            },
            "three": {
                "text": "<p>Third passage.</p>"
            },
            "four": {
                "text": "<p>Fourth passage.</p>"
            },
            "@2": {
                "text": "<p>This is some extra text to appear after the second click. The <a class=\\"squiffy-link link-section\\" data-section=\\"next section\\" role=\\"link\\" tabindex=\\"0\\">next section</a> is also good.</p>"
            }
        }
    },
    "next section": {
        "text": "<p>In this section, you can only click one link, and then you&#39;ll be taken to the final section.</p>\\n<p><a class=\\"squiffy-link link-passage\\" data-passage=\\"One\\" role=\\"link\\" tabindex=\\"0\\">One</a>, <a class=\\"squiffy-link link-passage\\" data-passage=\\"two\\" role=\\"link\\" tabindex=\\"0\\">two</a>, <a class=\\"squiffy-link link-passage\\" data-passage=\\"three\\" role=\\"link\\" tabindex=\\"0\\">three</a>, <a class=\\"squiffy-link link-passage\\" data-passage=\\"four\\" role=\\"link\\" tabindex=\\"0\\">four</a>.</p>",
        "passages": {
            "One": {
                "text": "<p>First passage.</p>"
            },
            "two": {
                "text": "<p>Second passage.</p>"
            },
            "three": {
                "text": "<p>Third passage.</p>"
            },
            "four": {
                "text": "<p>Fourth passage.</p>"
            },
            "@1": {
                "text": "",
                "jsIndex": 0
            }
        }
    },
    "final section": {
        "text": "<p><strong>THE END</strong></p>"
    }
};
story.js = [
	(squiffy, get, set) => {
		squiffy.story.go("final section");
	},
];"
`;

exports[`warnings/warnings.squiffy 1`] = `
[
  "WARNING: warnings.squiffy line 1: In section '_default' there is a link to a section called [[badsection2]], which doesn't exist",
  "WARNING: warnings.squiffy line 1: In section '_default' there is a link to a section called [[badsection]], which doesn't exist",
  "WARNING: warnings.squiffy line 9: In section 'section' there is a link to a passage called [badpassage2], which doesn't exist",
  "WARNING: warnings.squiffy line 9: In section 'section' there is a link to a passage called [badpassage], which doesn't exist",
  "WARNING: warnings.squiffy line 19: In section 'section', passage 'passage' there is a link to a passage called [non-existent passage], which doesn't exist",
]
`;

exports[`warnings/warnings2.squiffy 1`] = `
[
  "WARNING: warnings2.squiffy line 1: In section 'test' there is a link to a passage called [doesn't exist], which doesn't exist",
]
`;
